5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1764_1183.log
== SUBMITION (2019-05-28 13:18:55) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- EXECUTION TIME:
0.536528
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 2, in <module>
    a = float(input())
ValueError: could not convert string to float: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:18:57) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:19:22) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- EXECUTION TIME:
0.56462
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 2, in <module>
    a = float(input())
ValueError: could not convert string to float: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:07:12) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:08:29) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
p = 0 #posicao
while(p < N):
	d[p] = a * (t[p]**2)
	v0t = v0 * t[p]
	d[p] = (d[p]/2) + v0t
	p = p + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:25:15) 
-- CODE:
from numpy import*
a = array(eval(input("aceleracao do carro:")))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
p = 0 #posicao
while(p < N):
	d[p] = a * (t[p]**2)
	v0t = v0 * t[p]
	d[p] = (d[p]/2) + v0t
	p = p + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:27:22) 
-- CODE:
from numpy import*

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:27:24) 
-- CODE:
from numpy import*

-- EXECUTION TIME:
0.37256
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:

-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:45:21) 
-- CODE:
from numpy import* 
vet = array(
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- EXECUTION TIME:
1.96741
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 4
    tamanho = size(vet)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:45:22) 
-- CODE:
from numpy import* 
vet = array(
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- ERROR:
File "XXXX", line 4
    tamanho = size(vet)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:45:35) 
-- CODE:
from numpy import* 
vet = array([])
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:45:36) 
-- CODE:
from numpy import* 
vet = array([])
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- EXECUTION TIME:
0.699806
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:45:43) 
-- CODE:
from numpy import* 
vet = array([])
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- EXECUTION TIME:
0.496184
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:45:44) 
-- CODE:
from numpy import* 
vet = array([])
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- EXECUTION TIME:
0.900048
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:45:45) 
-- CODE:
from numpy import* 
vet = array([])
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- EXECUTION TIME:
1.71814
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:46:00) 
-- CODE:
from numpy import* 
vet = array("[]")
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- EXECUTION TIME:
8.75019
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 7, in <module>
    if(vet[posi] > 0):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:48:32) 
-- CODE:
from numpy import* 
vet = array(eval(input("N inteiros:")))
posi = 0
t = size(vet) #tamanho 
NP = 0 #numeros positivos
while(posi < t):
	if(vet[posi] > 0):
		NP =  NP + 1
	posi = posi + 1
nvet = zeros(NP, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:48:51) 
-- CODE:
from numpy import* 
vet = array(eval(input("N inteiros:")))
posi = 0
t = size(vet) #tamanho 
NP = 0 #numeros positivos
while(posi < t):
	if(vet[posi] > 0):
		NP =  NP + 1
	posi = posi + 1
nvet = zeros(NP, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- EXECUTION TIME:
0.348479
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:25:18) 
-- CODE:
from numpy import*

v = arra(eval(input("v:")))

y = array( [x for x in a if x>0])

pŕint(y)

-- EXECUTION TIME:
0.561502
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 3, in <module>
    v = arra(eval(input()))
NameError: name 'arra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:25:26) 
-- CODE:
from numpy import*

v = arra(eval(input("v:")))

y = array( [x for x in a if x>0])

print(y)

-- EXECUTION TIME:
0.42332
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 3, in <module>
    v = arra(eval(input()))
NameError: name 'arra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:25:27) 
-- CODE:
from numpy import*

v = arra(eval(input("v:")))

y = array( [x for x in a if x>0])

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:25:42) 
-- CODE:
from numpy import*

v = array(eval(input("v:")))

y = array ([x for x in a if x>0])

print(y)

-- EXECUTION TIME:
0.410788
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 5, in <module>
    y = array ([x for x in a if x>0])
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:25:43) 
-- CODE:
from numpy import*

v = array(eval(input("v:")))

y = array ([x for x in a if x>0])

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:25:43) 
-- CODE:
from numpy import*

v = array(eval(input("v:")))

y = array ([x for x in a if x>0])

print(y)

-- EXECUTION TIME:
0.388126
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 5, in <module>
    y = array ([x for x in a if x>0])
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:22:09) 
-- CODE:
from numpy import* 
vet = array(eval(input("N inteiros:")))
posi = 0
t = size(vet) #tamanho 
NP = 0 #numeros positivos
while(posi < t):
	if(vet[posi] > 0):
		NP =  NP + 1
	posi = posi + 1
nvet = zeros(NP, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:22:20) 
-- CODE:
from numpy import* 
vet = array(eval(input("N inteiros:")))
posi = 0
t = size(vet) #tamanho 
NP = 0 #numeros positivos
while(posi < t):
	if(vet[posi] > 0):
		NP =  NP + 1
	posi = posi + 1
nvet = zeros(NP, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- EXECUTION TIME:
5.67353
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[1]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:22:23) 
-- CODE:
from numpy import* 
vet = array(eval(input("N inteiros:")))
posi = 0
t = size(vet) #tamanho 
NP = 0 #numeros positivos
while(posi < t):
	if(vet[posi] > 0):
		NP =  NP + 1
	posi = posi + 1
nvet = zeros(NP, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- EXECUTION TIME:
3.78378
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:28:20) 
-- CODE:
from numpy import* 
vet = array(eval(input("N inteiros:")))

y = array( [x for x in vet if x>0])
print(y)
-- EXECUTION TIME:
0.489801
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
